--- a/.github/ISSUE_TEMPLATE/------.md
+++ b/.github/ISSUE_TEMPLATE/------.md
@@ -1,38 +1,19 @@
 ---
-name: Ошибка
-about: Запрос на исправление ошибки
-title: "[BUG]"
-labels: bug
+name: Задача
+about: Запрос на доработку проекта
+title: "[FEATURE]"
+labels: enhancement
 assignees: ''
 
 ---
 
-### Описание ошибки
-*<Четкое и краткое описание ошибки>*
+### Цель
+*<Четкое и краткое описание данной задачи>*
 
-### Ожидаемое поведение
-*<Описание того как должно работать на самом деле>
-<Ссылка на вариант с рабочей версией если есть>*
-
-### Шаги воспроизведения
-*<Описание того, что нужно сделать, чтобы увидеть проблему>*
-1. Зайти '...'
-2. Нажать на '...'
-3. Вот ошибка
-
-### Конфигурация
-*<Описание конфигурации на которой воспроизводится ошибка>*
-
-Ошибка воспроизводится на следующей конфигурации:
-**Устройство:** `(компьютер, планшет, смартфон)`
-**ОС:** `(win, mono, ios)`
-**Браузер:** `(Chrome, FireFox, Edge, IE, Safari)`
-**Версия браузера:** `(x.x.x)`
-**Версия проекта:** `(номер версии или имя ветки)`
-
-### Пути решения
-*<Описание того, в чём заключается проблема>
-<Подсказки программисту как исправить ошибку>*
+### Функциональные требования
+*<Условия которые должны быть выполнены, чтобы задачу можно было бы засчитать сделанной с т.з. реализованной функциональности>*
+1. Реализовать '...'
+2. Проверить '...'
 
 ### Исходный код
 *<Указание на то, в каком репозитории вносить изменения, какую ветку взять за основу, в каких классах или файлах вести доработки, а что не трогать ни при каких условиях>*
@@ -41,8 +22,17 @@ assignees: ''
 **Ветка:** `<имя ветки>`
 
 ### Документация
-*<Ссылки на документацию по исправляемой подсистеме, компоненту, классу>*
+*<Ссылки на документацию по дорабатываемой подсистеме, компоненту, классу или куда её добавить>*
  - [Ссылка](https://<адрес>.com) - ссылка на документацию
 
 ### Тесты
-*<Тесты которые нужно разработать в рамках этой задачи (модульные, интеграционные, сценарии тестирования), чтобы предотвратить такую ошибку в будущем>*
+*<Тесты которые нужно разработать в рамках реализации этой задачи (модульные, интеграционные, сценарии тестирования)>*
+
+### Аналоги, примеры реализации
+*<Примеры, куда ещё можно посмотреть, чтобы понять, что требуется сделать в конечном итоге. Какие функции нужно повторить, а какие нет>*
+ - [Ссылка](https://<адрес>.com) - ссылка на аналог
+
+### Полезные ссылки, скриншоты
+*<Дополнительный материал который может пригодиться, чтобы успешно справиться с поставленной задачей (номер задачи, запись на форуме и т.д.)>*
+ - [Ссылка](https://<адрес>.com) - полезная ссылка
+ - ![Скриншот]()
